// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/mobile/navbar it renders 1`] = `
<div
  className="makeStyles-root"
>
  <a
    className="makeStyles-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="makeStyles-logo"
      id="WHITE"
    />
  </a>
  <div
    className="makeStyles-actions"
  >
    <div
      className="makeStyles-network"
      onClick={[MockFunction]}
      role="button"
    >
      <p
        className="text"
      >
        morpheus-apollo-1
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
        color="#999999"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
    <div
      className="makeStyles-hamburger"
      onClick={[MockFunction]}
      role="button"
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/mobile/navbar toggleNavMenus is called onClick 1`] = `
<div
  className="makeStyles-root"
>
  <a
    className="makeStyles-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="makeStyles-logo"
      id="WHITE"
    />
  </a>
  <div
    className="makeStyles-actions"
  >
    <div
      className="makeStyles-network"
      onClick={[MockFunction]}
      role="button"
    >
      <p
        className="text"
      >
        morpheus-apollo-1
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
        color="#999999"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
    <div
      className="makeStyles-hamburger"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      role="button"
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;
